Готова форма регистрации

--- a/FitnessAssistant/FitnessAssistant.csproj
+++ b/FitnessAssistant/FitnessAssistant.csproj
@@ -111,5 +111,8 @@
   <ItemGroup>
     <Resource Include="IMG\close.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Windows\close.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
