--- a/FitnessAssistant.Tests/FitnessAssistant.Tests.csproj
+++ b/FitnessAssistant.Tests/FitnessAssistant.Tests.csproj
@@ -52,8 +52,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CalculationsTests.cs" />
+    <Compile Include="HelperClass\UserSearchTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="AuthorizationWindowTests.cs" />
+    <Compile Include="UserSearchTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
