--- a/FitnessAssistant/FitnessAssistant.csproj
+++ b/FitnessAssistant/FitnessAssistant.csproj
@@ -105,7 +105,10 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="HelperClass\Calculations.cs" />
-    <Compile Include="HelperClass\UserJob.cs" />
+    <Compile Include="HelperClass\UserSearch.cs" />
+    <Compile Include="Windows\CalcBMIWindow.xaml.cs">
+      <DependentUpon>CalcBMIWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\RegistrationWindow.xaml.cs">
       <DependentUpon>RegistrationWindow.xaml</DependentUpon>
     </Compile>
@@ -124,6 +127,10 @@
       <DependentUpon>AuthorizationWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Windows\CalcBMIWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\RegistrationWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
