--- a/FitnessAssistant/FitnessAssistant.csproj
+++ b/FitnessAssistant/FitnessAssistant.csproj
@@ -98,19 +98,41 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
+    <Compile Include="EF\sp_helpdiagramdefinition_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EF\sp_helpdiagrams_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="EF\sysdiagrams.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EF\TypeWorkout.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="EF\Users.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="EF\UserWorkout.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EF\Workout.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="HelperClass\Calculations.cs" />
     <Compile Include="HelperClass\UserSearch.cs" />
+    <Compile Include="HelperClass\UserWorkout.cs" />
+    <Compile Include="Windows\AddWorkoutWindow.xaml.cs">
+      <DependentUpon>AddWorkoutWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\CalcBMIWindow.xaml.cs">
       <DependentUpon>CalcBMIWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Windows\CalcBMRWindow.xaml.cs">
       <DependentUpon>CalcBMRWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\MyWorkoutsWindow.xaml.cs">
+      <DependentUpon>MyWorkoutsWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Windows\RegistrationWindow.xaml.cs">
       <DependentUpon>RegistrationWindow.xaml</DependentUpon>
@@ -118,6 +140,10 @@
     <Compile Include="Windows\UserWindow.xaml.cs">
       <DependentUpon>UserWindow.xaml</DependentUpon>
     </Compile>
+    <Page Include="Windows\AddWorkoutWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\AuthorizationWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -135,6 +161,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Windows\CalcBMRWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\MyWorkoutsWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
